<resources>
    <string name="app_name">BrainTrainer</string>
    <string name="todo">TODO</string>
    <string name="start">Start</string>
    <string name="brain_trainer">Brain Trainer</string>
    <string name="click_start_to_train_your_brain">Click start to train your brain!</string>
    <string name="_30s">30s</string>
    <string name="_0_0">0/0</string>
    <string name="_31_32">31 + 32</string>
    <string name="play_again">Play Again!</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
</resources>